@@ -16,7 +16,7 @@ print "<div id=\"footer\" class=\"$TEXT_DIRECTION\">";
 	}
 	print "<br />Running <a href=\"http://www.genmod.net\" target=\"_blank\">Genmod";
 	if (count($CONFIG_PARMS) >1) print " Enterprise";
-	if (SystemConfig::$MEDIA_IN_DB) print " VFS";
+	print MediaFS::GetStorageType();
 	print "</a>  - Version ".GM_VERSION." ".GM_VERSION_RELEASE;
 	print "</div>";
 	print "</div> <!-- close div id=\"footer\" -->\n";
