@@ -9,6 +9,8 @@
 =====================================================================
 
 Version 2.0 beta 2
+- Fixed options jumping around in index edit (sjouke)
+- Fixed space before VFS in footer text (sjouke)
 - Added check for L1 sources if no L2 are found in sanity check (sjouke)
 - Fixed wrong display of changes on new, unapproved indi (sjouke)
 - Removed debug code from edit_interface (sjouke)
